Z-index fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -64,6 +64,7 @@
   width: 100%;
   left: -150%;
   position: absolute;
+  z-index: 5;
   display: inline-block;
   list-style: none;
   color: #FFFFFF;
@@ -181,6 +182,7 @@
       margin: 10px 21.6px;
       padding-left: 8px;
       position: relative;
+      z-index: 4;
       background: #FFFFFF;
       list-style: none; }
       .search__box__list::after {
